# pictoralist-python

./: README.md
pictoralist/: pyproject.toml
pictoralist/src/pictoralist/: pictoralist.py  pictoralist_p.py
pictoralist/tests/: selected_message.json
