[tool.poetry]
name = "pictoralist"
version = "0.1.0"
description = "to visualize esteemer output"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rdfpandas = "^1.1.5"
rdflib = "^6.1.1"
SPARQLWrapper = "^2.0.0"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
pycln = "^1.3.3"
black = "^22.3.0"
flake8 = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# tooling running pytest will not resolve modules in `src`
testpaths = ["tests"]
pythonpath = ["src"]
